--- a/src/css/style.css
+++ b/src/css/style.css
@@ -5,6 +5,23 @@ html, body {
   overflow:  hidden !important;
 }
 
+*{
+    font-family: "Audiowide", sans-serif !important;
+}
+
+select{
+    background: #dcf2fb;
+    color: black;
+    position: absolute;
+    top: 16.5%;
+    width: 80%;
+    height: 37px;
+    text-align: center;
+    border-radius: 15px;
+    font-size: 20px;
+    margin-left: 10%;
+}
+
 .hide
 {
     position: absolute;
@@ -13,12 +30,6 @@ html, body {
     width: 1px;
     height: 1px;
     overflow: hidden;
-}
-
-#dropdown {
-    margin-bottom: 10px;
-    display: block;
-    margin: 0 auto; /* Center the dropdown */
 }
 
 .container
@@ -88,6 +99,8 @@ html, body {
 #label{
     display: none;
     justify-content: center;
+    margin-top: 20px;
+    padding-right: 10px;
 }
 
 /* logo shenanigans */
